Reset MCU ready status before resetting the MCU. Fixes PR kern/54728